| Bug #21994 | Cluster binaries not showing default options | ||
|---|---|---|---|
| Submitted: | 4 Sep 2006 14:31 | Modified: | 2 Nov 2006 9:18 |
| Reporter: | Hartmut Holzgraefe | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1, 5.0, 5.1 | OS: | |
| Assigned to: | Hartmut Holzgraefe | Target Version: | |
| Tags: | cluster help options configuration defaults | ||
[4 Sep 2006 14:31]
Hartmut Holzgraefe
[4 Sep 2006 14:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11359 ChangeSet@1.2251, 2006-09-04 16:33:56+02:00, hartmut@mysql.com +14 -0 added print_defaults() calls to --help output for all binaries (Bug #21994)
[4 Sep 2006 14:37]
Jonas Oreland
Should you backport to 4.1 ?
[10 Oct 2006 18:41]
Jonas Oreland
pushed into 5.1.12
[1 Nov 2006 14:46]
Jonas Oreland
pushed into 5.0.29 no fix in 4.1
[2 Nov 2006 9:18]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix for 5.0.29 & 5.1.12.
[4 Nov 2006 3:26]
Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*
