added print_defaults() calls to --help output for all binaries (Bug #21994)